--- a/TimeTableWeb/TimeTableUI.csproj
+++ b/TimeTableWeb/TimeTableUI.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Occupation\Controllers\OccupationController.cs" />
     <Compile Include="Areas\Occupation\Models\ApplicantDetailInOccupationViewModel.cs" />
+    <Compile Include="Areas\Occupation\Models\OccupationList1ViewModel.cs" />
     <Compile Include="Areas\Occupation\OccupationAreaRegistration.cs" />
     <Compile Include="Areas\TimeLine\Controllers\TimeLineController.cs" />
     <Compile Include="Areas\TimeLine\Models\ApplicantTimeLineViewModel.cs" />
